--- a/src/style1.css
+++ b/src/style1.css
@@ -10,9 +10,9 @@ h1{font-family: 'Supermercado One', cursive; color:#5d4037;font-size: 45px;}
 #menu {columns: 400px 2; column-gap: 100px; column-rule: 2px dashed rosybrown;}
 section {margin-bottom: 50px;}
 
-h2 {margin: 0; color:#6d4c41;text-transform: uppercase;}
+h2 {margin: 0;font-variant: small-caps; color:#6d4c41;}
 
-dt {font-variant: small-caps;font-weight: bold;}
+dt {font-weight: bold;font-size:20px;}
 
 dd {margin: 0 0 12px 0; display: flex;}
 
